# pybind11_cmake_test

./: CMakeLists.txt  README.md
.cache/clangd/index/: attr.h.576AFE35E5DFBB9C.idx  buffer_info.h.40BD916BA6ADB814.idx  cast.h.C5DE7B7E2ED3C50A.idx  class.h.24F3939DC43F7520.idx  common.h.F20CD326E54F36C9.idx  descr.h.919AB69BFF606C62.idx  gil.h.96FC076F130D6980.idx  init.h.2861591635AA1739.idx  internals.h.5DB0C7C800630401.idx  my_math.cpp.C6CC04C33D198E92.idx  my_math.h.CF7BD18E3C4DFC04.idx  options.h.1726B68415FF979F.idx  pybind11.h.984D9DD973D97379.idx  pytypes.h.BDED528ED1A1A92C.idx  simple_operators.cpp.32AE18D6427FFF98.idx  simple_operators.h.65034E2E44703BC5.idx  type_caster_base.h.28C977D31007B26F.idx  typeid.h.9B9DDBACFF9DE762.idx
my_math/: CMakeLists.txt
my_math/include/: my_math.h
my_math/src/: my_math.cpp  simple_operators.cpp
my_math_core/: CMakeLists.txt
my_math_core/src/: simple_operators.h
python_binds/: CMakeLists.txt
python_binds/src/: my_math.cpp
